[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.13" }
bevy_asset_loader = { version = "0.14" }
rand = { version = "0.8.3" }
bevy-inspector-egui = {version="0.15.0" ,optional=true} 

# keep the following in sync with Bevy's dependencies
winit = { version = "0.27", default-features = false }
image = { version = "0.24", default-features = false }
board-game = { git = "https://github.com/azarmadr/board-game-rs", version = "0.6.0" }
# menu-plugin = { git = "https://github.com/azarmadr/bevy-ui-menu-plugin", version = "0.1.0" }
bevy_quickmenu = "0.1.5"

[build-dependencies]
embed-resource = "1.4"

