[package]
name = "bevy_game"                               # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"]        # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
  "bevy/dynamic",
  "bevy-inspector-egui",
  "iyes_loopless/bevy-inspector-egui",
]

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  # "render",
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  # "bevy_pbr",           # 3D (physically-based) rendering
  # "bevy_gltf",          # GLTF 3D assets format support
  "bevy_text", # Text/font rendering
  "bevy_ui",   # UI toolkit

  "png",
  "x11",
] }
# bevy_kira_audio = { version = "0.13" }
bevy_asset_loader = { version = "0.14", features = ["2d", "stageless"] }
rand = { version = "0.8.5" }
bevy-inspector-egui = { version = "0.15.0", optional = true }
image = { version = "0.24", default-features = false }
board-game = { git = "https://github.com/azarmadr/board-game-rs", version = "0.6.0" }
# menu-plugin = { git = "https://github.com/azarmadr/bevy-ui-menu-plugin", version = "0.1.0" }
bevy_quickmenu = "0.1.5"
# bevy_ecs_tilemap = "0.9.0"
bevy_tweening = { version = "0.6.0", default-features = false }
iyes_loopless = "0.9.1"
winit = { version = "0.27", default-features = false }

[build-dependencies]
embed-resource = "1.4"
