[package]
name = "oware"
version = "0.2.1"
publish = false
authors = ["Azhar Madar Shaik <azarmadr@pm.me>"]        # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
  "bevy/bevy_dylib",
  "bevy-inspector-egui",
]

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  # "bevy_pbr",           # 3D (physically-based) rendering
  # "bevy_gltf",          # GLTF 3D assets format support
  "bevy_text", # Text/font rendering
  "bevy_ui",   # UI toolkit

  "png",
  "x11",
] }
# bevy_kira_audio = { version = "0.15" }
bevy_asset_loader = { version = "0.15", features = ["2d"] }
rand = { version = "0.8.5" }
bevy-inspector-egui = { version = "0.18", optional = true }
board-game = { git = "https://github.com/azarmadr/board-game-rs", version = "0.6.0" }
bevy_quickmenu ={ git = "https://github.com/azarmadr/bevy_quickmenu", version = "0.1.5" }
bevy_tweening = { version = "0.7.0", default-features = false }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
